fixed skills section with icon spacing

--- a/css/main.css
+++ b/css/main.css
@@ -201,9 +201,25 @@ h2,h3 {
   #skills-section {
       padding-top: 7em !important;
   }
+  #skills-color {
+      background: #e74c3c !important;
+      max-height: 100vh !important;
+      height: 80% !important;
+  }
+  #skills-color > div {
+      padding: 3em !important;
+  }
  #skills {
      display: inline-block !important;
      position: static !important;
+ }
+ #skills-heading {
+     text-align: center !important;
+      
+ }
+ #skills-container {
+    padding-left: 30% !important;
+    padding-right: 30% !important;
  }
  article {
     border-radius: unset !important;
@@ -229,7 +245,7 @@ figure > img {
 
 }
 i{
-    font-size: 5em !important;
+    font-size: 6em !important;
     color: #ffffff;
     /* padding-left: 1em !important; */
 }
@@ -243,6 +259,7 @@ i{
     #about-padding {
         padding-left: 2.5em !important;
         padding-right: 2.5em !important;
+        padding-bottom: 1.5em !important;
     }
     #edu-padding {
         padding-left: 2.5em !important;
@@ -257,7 +274,10 @@ i{
 /* =========================================== */
 /*            Loading Image                    */
 /* =========================================== */
-
+.padding-top {
+    padding-top: 1.5em !important;
+    padding-left: 2em !important;
+}
 .wrapper{
     position: absolute;
     /* float: left; */
